<resources>
    <string name="app_name">EnglishDictionary</string>
    <string name="search">검색</string>
    <string name="my_word">나만의단어장</string>
    <string name="wrong_note">오답노트</string>
    <string name="search_hint">검색할 내용을 입력해주세요</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="baseURL">https://dic.daum.net/search.do?q=</string>
    <string name="searchVoca">단어검색</string>
    <string name="myVoca">나만의 단어장</string>
    <string name="vocaTest">단어 테스트</string>
    <string name="all_In_One">ALL-IN-ONE</string>
    <string name="dictionary">DICTIONARY</string>
    <string name="setup_time">제한 시간 설정</string>
    <string name="korean_test">한국어 테스트</string>
    <string name="english_test">영어 테스트</string>
    <string name="ready">준비하십시오!</string>
    <string name="test_is_coming">곧 테스트가 시작됩니다!</string>
    <string name="korean_test_title">한국어 테스트</string>
    <string name="time_remaining">남은 시간</string>
    <string name="complete">완료</string>
    <string name="input_korean_hint">뜻을 입력해주세요</string>
    <string name="test_over">테스트 종료</string>
    <string name="select_word_title">단어 이동</string>
    <string name="submit_title">제출</string>
    <string name="test_result_title">테스트 결과</string>
    <string name="question">문제</string>
    <string name="answer">정답</string>
    <string name="myAnswer">나의 답</string>
    <string name="total_question">전체 문제수</string>
    <string name="correct_question">맞은 문제수</string>
    <string name="correct_rate">정답률</string>
    <string name="try_again">다시보기</string>
    <string name="way_back_home">홈 화면으로 돌아가기</string>
</resources>