<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="kr.co.project.zeroid.englishdictionary.MainViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/icon_book"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/ic_baseline_collections_bookmark_24"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/first_title"/>

        <TextView
            android:id="@+id/first_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textColor="@color/red_title"
            android:textSize="36sp"
            android:textStyle="bold"
            android:text="@string/all_In_One"
            app:layout_constraintTop_toBottomOf="@id/icon_book"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/second_title"/>

        <TextView
            android:id="@+id/second_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/blue_title"
            android:textSize="36sp"
            android:textStyle="bold"
            android:text="@string/dictionary"
            app:layout_constraintTop_toBottomOf="@id/first_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/searchVocaButton"/>

        <Button
            android:id="@+id/searchVocaButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="25dp"
            android:text="@string/searchVoca"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:background="@drawable/blue_button"
            android:onClick="@{() -> viewModel.onSearchButtonClick()}"
            app:backgroundTint="@null"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/second_title"
            app:layout_constraintBottom_toTopOf="@+id/myVocaButton"/>

        <Button
            android:id="@+id/myVocaButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/myVoca"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:background="@drawable/blue_button"
            app:backgroundTint="@null"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchVocaButton"
            app:layout_constraintBottom_toTopOf="@+id/vocaTestButton"/>

        <Button
            android:id="@+id/vocaTestButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/vocaTest"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:background="@drawable/blue_button"
            app:backgroundTint="@null"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/myVocaButton"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

