<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="kr.co.project.zeroid.englishdictionary.vocatest.testresult.TestResultViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".vocatest.testresult.TestResultActivity">

            <LinearLayout
                android:id="@+id/title_bar"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:orientation="horizontal"
                android:background="@color/blue_title"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_result_title"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:gravity="center"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/result_list_title"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="30dp"
                android:background="@color/gray"
                app:layout_constraintTop_toBottomOf="@id/title_bar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@drawable/black_stroke"
                    style="@style/result_text"
                    android:text="@string/question"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@drawable/black_stroke"
                    style="@style/result_text"
                    android:text="@string/answer"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@drawable/black_stroke"
                    style="@style/result_text"
                    android:text="@string/myAnswer"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/result_list_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical"
                android:background="@drawable/black_stroke"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@+id/result_list_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/total_question_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/total_question"
                style="@style/big_text"
                app:layout_constraintTop_toBottomOf="@id/result_list_container"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/correct_question_title"/>

            <TextView
                android:id="@+id/total_question_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@{viewModel.totalQuestion}"
                tools:text="4"
                style="@style/big_text"
                app:layout_constraintTop_toBottomOf="@id/result_list_container"
                app:layout_constraintBottom_toTopOf="@id/correct_question_number"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/correct_question_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/correct_question"
                style="@style/big_text"
                app:layout_constraintTop_toBottomOf="@id/total_question_title"
                app:layout_constraintBottom_toTopOf="@id/correct_rate_title"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/correct_question_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:textColor="@color/blue_title"
                android:text="@{viewModel.correctQuestion}"
                tools:text="3"
                style="@style/big_text"
                app:layout_constraintTop_toBottomOf="@id/total_question_number"
                app:layout_constraintBottom_toTopOf="@id/correct_rate_number"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/correct_rate_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/correct_rate"
                style="@style/big_text"
                app:layout_constraintTop_toBottomOf="@id/correct_question_title"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/correct_rate_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:textColor="@color/blue_title"
                android:text="@{viewModel.correctRate}"
                tools:text="75%"
                style="@style/big_text"
                app:layout_constraintTop_toBottomOf="@id/correct_question_number"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/try_again_button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/blue_button"
                android:onClick="@{() -> viewModel.onTestButtonClick()}"
                style="@style/blue_button_text"
                android:text="@string/try_again"
                app:layout_constraintTop_toBottomOf="@id/correct_rate_title"
                app:layout_constraintBottom_toTopOf="@id/back_home_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <Button
                android:id="@+id/back_home_button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/blue_button"
                android:onClick="@{() -> viewModel.onHomeButtonClick()}"
                style="@style/blue_button_text"
                android:text="@string/way_back_home"
                app:layout_constraintTop_toBottomOf="@id/try_again_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>

