<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="viewModel"
            type="kr.co.project.zeroid.englishdictionary.vocatest.settingvoca.SettingVocaTestViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".vocatest.settingvoca.SettingVocaTestActivity">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setup_time"
            style="@style/black_text"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/column"/>

        <EditText
            android:id="@+id/minute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:textSize="50sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:onTextChanged="@{viewModel.onMinuteChanged}"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintBaseline_toBaselineOf="@id/column"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/column"/>

        <TextView
            android:id="@+id/column"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=":"
            android:textSize="50sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toEndOf="@id/minute"
            app:layout_constraintEnd_toStartOf="@id/second"
            app:layout_constraintBottom_toTopOf="@id/koreanTest"/>

        <EditText
            android:id="@+id/second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:textSize="50sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:onTextChanged="@{viewModel.onSecondChanged}"
            app:layout_constraintBaseline_toBaselineOf="@id/column"
            app:layout_constraintStart_toEndOf="@id/column"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/koreanTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/korean_test"
            style="@style/blue_button_text"
            android:background="@drawable/blue_button"
            android:onClick="@{() -> viewModel.onKoreanTestButtonClick()}"
            app:backgroundTint="@null"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/column"
            app:layout_constraintBottom_toTopOf="@+id/englishTest"/>

        <Button
            android:id="@+id/englishTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/english_test"
            style="@style/blue_button_text"
            android:background="@drawable/blue_button"
            android:onClick="@{() -> viewModel.onEnglishTestButtonClick()}"
            app:backgroundTint="@null"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/koreanTest"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

