<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="kr.co.project.zeroid.englishdictionary.vocatest.koreantest.KoreanTestViewModel" />

    </data>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".vocatest.koreantest.KoreanTestActivity">

        <LinearLayout
            android:id="@+id/title_bar"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:orientation="horizontal"
            android:background="@{viewModel.testType ? @color/green_title_bar : @color/purple_title_bar}"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.testType ? @string/korean_test_title : @string/english_test}"
                android:textSize="36sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:gravity="center"/>

        </LinearLayout>

        <TextView
            android:id="@+id/time_remaining"
            android:layout_width="110dp"
            android:layout_height="35dp"
            android:text="@string/time_remaining"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            style="@style/black_text"
            app:layout_constraintTop_toBottomOf="@+id/title_bar"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/question_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:text="@{viewModel.currentQuestionNumber}"
            tools:text="3/12"
            app:layout_constraintTop_toBottomOf="@id/title_bar"
            app:layout_constraintRight_toLeftOf="@id/time_holder"
            app:layout_constraintLeft_toRightOf="@id/time_remaining"/>

        <LinearLayout
            android:id="@+id/time_holder"
            android:layout_width="110dp"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:background="@drawable/time_remaining_holder"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintTop_toBottomOf="@+id/title_bar"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/minute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:text="@{viewModel.minute}"
                tools:text="00"/>

            <TextView
                android:id="@+id/column"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text=":"/>

            <TextView
                android:id="@+id/second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:text="@{viewModel.second}"
                tools:text="00" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/test_progress_bar"
            android:layout_width="270dp"
            android:layout_height="270dp"
            android:background="@drawable/ring_background"
            android:progressDrawable="@drawable/ring_progress"
            android:indeterminateOnly="false"
            android:max="@{viewModel.totalQuestionNumber}"
            android:progress="@{viewModel.currentProgress}"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@+id/title_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/test_word"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            style="@style/black_text"
            tools:text="banana"
            android:text="@{viewModel.displayWord}"
            app:layout_constraintTop_toTopOf="@id/test_progress_bar"
            app:layout_constraintRight_toRightOf="@id/test_progress_bar"
            app:layout_constraintLeft_toLeftOf="@id/test_progress_bar"
            app:layout_constraintBottom_toBottomOf="@id/test_progress_bar"/>
        
        <EditText
            android:id="@+id/input_korean"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@drawable/test_input_background"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:paddingStart="10dp"
            android:singleLine="true"
            android:inputType="textCapWords"
            android:onTextChanged="@{viewModel.onAnswerChanged}"
            app:layout_constraintTop_toBottomOf="@+id/test_progress_bar"
            app:layout_constraintBottom_toTopOf="@id/word_select_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/complete_button"/>

        <Button
            android:id="@+id/complete_button"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:height="40dp"
            android:background="@drawable/test_complete_button"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="25dp"
            style="@style/blue_button_text"
            android:text="@string/complete"
            android:onClick="@{() -> viewModel.onClickCompleteWord()}"
            app:layout_constraintTop_toBottomOf="@+id/test_progress_bar"
            app:layout_constraintStart_toEndOf="@id/input_korean"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/word_select_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_word_title"
            android:textSize="16sp"
            android:textColor="@color/red_title"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toTopOf="@id/word_select_container"
            app:layout_constraintTop_toBottomOf="@id/input_korean"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/word_select_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="7"
            app:layout_constraintTop_toBottomOf="@+id/word_select_title"
            app:layout_constraintBottom_toTopOf="@id/submit_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:onClick="@{() -> viewModel.onSubmitButtonClick()}"
            android:background="@drawable/blue_button"
            android:backgroundTint="@{viewModel.testType ? @color/green_title_bar : @color/purple_title_bar}"
            android:text="@string/submit_title"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/word_select_container"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>

